The project that passed the test

--- a/index.html
+++ b/index.html
@@ -4,170 +4,357 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>HackerYou</title>
-    <link rel="stylesheet" href="style.css" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Cabin"
-      rel="stylesheet"
+    <meta
+      name="keywords"
+      content="Nick Wang, Front End Development, Nick, Wang, Toronto Developer, Tech Challenge, HackerYou, Learn to code in Toronto"
     />
-    <link
-      href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700"
-      rel="stylesheet"
+    <meta
+      name="description"
+      content="Designer, Developer and Student at HackerYou, Tech Challenge 2019"
     />
+    <meta name="author" content="Nick Wang" />
+
+    <title>HackerYou | Learn to code in Toronto</title>
+    <link
+      rel="icon"
+      href="./styles/images/hackeryou-favicon.png"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="./styles/style.css" type="text/css" />
+
+    <!-- Font Awesome -->
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
       integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
       crossorigin="anonymous"
+      type="text/css"
     />
+    <!-- Flickity CSS -->
+    <link rel="stylesheet" href="./styles/flickity.css" type="text/css" />
   </head>
-  <header>
-    <div id="navbar">
-      <ul>
-        <li id="company-logo">HackerYou</li>
-        <li><a href="">PART-TIME</a></li>
-        <li><a href="">BOOTCAMP</a></li>
-        <li><a href="">CONTACT</a></li>
-        <li><a href="">ABOUT</a></li>
-        <li><a href="">HOME</a></li>
-      </ul>
-    </div>
-  </header>
+
   <body>
-    <div id="main-content">
-      <div id="main-content-info">
-        <h1>Winter 2019 Tech Test</h1>
-        <p>
-          Lorem ipsum dolor, sit cute doggo amet adipisicing elit. Sapiente
-          soluta ipsum fuga natus facilis sint exercitationem, ahje voluptatem
-          omegalul officiis quos numquam quae voluptas, eum culpa assumenda quis
-          autem debitis.
-        </p>
-      </div>
-    </div>
-
-    <div id="carousel">
-      <h1>Welcome to HackerYou</h1>
-      <i class="fas fa-angle-left fa-3x"></i>
-      <img src="./assets/image-2.jpg" alt="2-women" />
-      <i class="fas fa-angle-right fa-3x"></i>
-      <div>
-        <h3>FULL-TIME WEB DEVELOPMENT IMMERSIVE</h3>
-        <footer>January 1st, 2019</footer>
-      </div>
-    </div>
-
-    <div id="grid-content">
-      <!-- CARD 1 -->
-      <div class="card" id="card-1">
-        <div id="img-contain">
-          <img src="./assets/image-3.jpg" alt="instructor" />
-          <div id="date-box">
-            <h3 id="date">JAN 9, 2019</h3>
-          </div>
+    <!-- header-top -->
+    <header id="home">
+      <!-- wrapper -->
+      <div class="wrapper flexContainer">
+        <!-- logo -->
+        <div class="logo">
+          <h1>
+            <button class="refresh">HackerYou</button
+            ><img
+              src="./styles/images/hackeryou-favicon.png"
+              alt="hackeryou-icon"
+              class="image-switch"
+            />
+          </h1>
         </div>
-        <h1>Web Development</h1>
-        <p>
-          Lorem ipsum dolor, sit amet cond ddsectetur adipisicing elit. Tempore,
-          delectus. Aspernatur owk cooldude dwpdwliste fuga, temporibus
-          asperiore -
-        </p>
-        <button>READ MORE</button>
-      </div>
-
-      <!-- CARD 2 -->
-      <div class="card" id="card-2">
-        <div id="img-contain">
-          <img src="./assets/image-4.jpg" alt="instructor" />
-          <div id="date-box">
-            <h3 id="date">JAN 7, 2019</h3>
-          </div>
-        </div>
-        <h1>Team Culture</h1>
-        <p>
-          Lorem ipsum dolor, sit amet cond ddsectetur adipisicing elit. Tempore,
-          delectus. Aspernatur owk cooldude dwpdwliste fuga, temporibus
-          asperiore -
-        </p>
-        <button>READ MORE</button>
-      </div>
-
-      <!-- CARD 3  -->
-      <div class="card" id="card-3">
-        <div id="img-contain">
-          <img src="./assets/image-6.jpg" alt="instructor-teaching" />
-          <div id="date-box">
-            <h3 id="date">JAN 6, 2019</h3>
-          </div>
-        </div>
-        <h1>JavaScript</h1>
-        <p>
-          Lorem ipsum dolor, sit amet cond ddsectetur adipisicing elit. Tempore,
-          delectus. Aspernatur owk cooldude dwpdwliste fuga, temporibus
-          asperiore -
-        </p>
-        <button>READ MORE</button>
-      </div>
-
-      <!-- CARD 4 -->
-      <div class="card" id="card-4">
-        <div id="img-contain">
-          <img src="./assets/image-5.jpg" alt="instructor" />
-          <div id="date-box">
-            <h3 id="date">JAN 4, 2019</h3>
-          </div>
-        </div>
-        <h1>Student Experience</h1>
-        <p>
-          Lorem ipsum dolor, sit amet cond ddsectetur adipisicing elit. Tempore,
-          delectus. Aspernatur owk cooldude dwpdwliste fuga, temporibus
-          asperiore -
-        </p>
-        <button>READ MORE</button>
-      </div>
-    </div>
-
-    <div id="page-footer">
-      <div id="left-info">
-        <div id="footer-info">
-          <h5>HACKERYOU TECH TEST</h5>
-          <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. I did it
-            WOOHOO tshunis mdu tsundrer.
-          </p>
-        </div>
-        <div id="footer-list">
-          <ul>
-            <li><a href="">HOME</a></li>
-            <li><a href="">ABOUT</a></li>
-            <li><a href="">BOOTCAMP</a></li>
-            <li><a href="">PART-TIME</a></li>
-            <li><a href="">CONTACT</a></li>
+        <!-- hamburger icon -->
+        <p class="hamburger"><i class="fas fa-bars"></i></p>
+        <!-- navbar -->
+        <nav class="menu">
+          <ul class="nav">
+            <li><a href="#home">home</a></li>
+            <li><a href="#about">about</a></li>
+            <li><a href="#contact">contact</a></li>
+            <li><a href="#bootcamp">bootcamp</a></li>
+            <li><a href="#part-time">part-time</a></li>
           </ul>
-        </div>
+        </nav>
+        <!-- end of navbar -->
       </div>
-      <div id="footer-form">
-        <div id="sign-up-info">
-          <h5>SUBSCRIBE TO OUR NEWSLETTER</h5>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-        </div>
-        <div id="sign-up">
-          <input type="email" placeholder="email address" />
-          <button><h4>SUBSCRIBE</h4></button>
-        </div>
-      </div>
-    </div>
+      <!-- end of wrapper -->
+    </header>
+    <!-- end of header-top -->
 
-    <div id="page-end">
-      <h4>
-        <i class="far fa-copyright fa-xs" id="copyright"></i> 2018 HACKERYOU
-        <div id="page-end-icons">
-          <i class="fab fa-twitter"></i>
-          <i class="fab fa-instagram"></i>
-          <i class="fab fa-facebook-f"></i>
-          <i class="fab fa-google-plus-g"></i>
+    <!-- hero section -->
+    <section class="hero">
+      <!-- wrapper -->
+      <div class="wrapper">
+        <!-- article -->
+        <article>
+          <h2>Winter 2019 Tech Test</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetuer adipisicing elit. sed diam
+            nonum my nibh euis- mod tincidunt ut laoreet dolore magna ali- quam
+            erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci
+            tation ullamcorper.
+          </p>
+        </article>
+        <!-- end of article -->
+      </div>
+      <!-- end of wrapper -->
+    </section>
+    <!-- end of hero section -->
+
+    <!-- Main -->
+    <main>
+      <!-- bootcamp section -->
+      <section class="bootcamp" id="bootcamp">
+        <!-- wrapper -->
+        <div class="wrapper">
+          <h2>Welcome to HackerYou</h2>
+          <!-- carousel -->
+          <div class="main-carousel">
+            <div class="carousel-cell">
+              <img
+                src="./styles/images/two-women-working-on-macbook.jpg"
+                alt="two women working on macbook"
+              />
+            </div>
+
+            <div class="carousel-cell">
+              <img
+                src="./styles/images/male-instructor-during-class.jpg"
+                alt="male instructor speaking during class"
+              />
+            </div>
+
+            <div class="carousel-cell">
+              <img
+                src="./styles/images/three-people-standing-infront-of-wall-plant.jpg"
+                alt="three students standing in front of wall plant"
+              />
+            </div>
+
+            <div class="carousel-cell">
+              <img
+                src="./styles/images/back-shot-of-women-working-on-macbook.jpg"
+                alt="behind photo of women working on her MacBook"
+              />
+            </div>
+
+            <div class="carousel-cell">
+              <img
+                src="./styles/images/instructor-teaching-male-student-while-women-work-beside.jpg"
+                alt="instructor helping a male student while female student working beside"
+              />
+            </div>
+          </div>
+          <!-- end of carousel -->
+          <div class="info-card">
+            <p>Full-time web development immersive</p>
+            <h3>January 1st, 2019</h3>
+          </div>
         </div>
-      </h4>
-    </div>
+        <!-- end of wrapper -->
+      </section>
+      <!-- end of bootcamp section -->
+
+      <!-- about section -->
+      <section class="cards" id="about">
+        <!-- wrapper -->
+        <div class="wrapper">
+          <!-- flexContainer -->
+          <ul class="flexContainer">
+            <!-- card1-->
+            <li class="card1">
+              <figure>
+                <div class="img-container">
+                  <img
+                    src="./styles/images/male-instructor-during-class.jpg"
+                    alt="male instructor speaking during class"
+                  />
+                </div>
+
+                <figcaption>
+                  <h3 class="date">jan 9, 2019</h3>
+                  <h2>Web Development</h2>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetuer adipi-sicing elit,
+                    sed diam nonummy nibh euismod tin- cidunt ut laoreet dolore
+                    magna aliquam erat vo-
+                  </p>
+                  <button>read more</button>
+                </figcaption>
+              </figure>
+            </li>
+            <!-- end of card1 -->
+            <!-- card2 -->
+            <li class="card2">
+              <figure>
+                <div class="img-container">
+                  <img
+                    src="./styles/images/three-people-standing-infront-of-wall-plant.jpg"
+                    alt="three students standing in front of wall plant"
+                  />
+                </div>
+
+                <figcaption>
+                  <h3 class="date">jav 7, 2019</h3>
+                  <h2>Team Culture</h2>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetuer adipi-sicing elit,
+                    sed diam nonummy nibh euismod tin- cidunt ut laoreet dolore
+                    magna aliquam erat vo-
+                  </p>
+                  <button>read more</button>
+                </figcaption>
+              </figure>
+            </li>
+            <!-- end of card2 -->
+            <!-- card3  -->
+            <li class="card3" id="part-time">
+              <figure>
+                <div class="img-container">
+                  <img
+                    src="./styles/images/back-shot-of-women-working-on-macbook.jpg"
+                    alt="behind photo of women working on her MacBook"
+                  />
+                </div>
+
+                <figcaption>
+                  <h3 class="date">jav 6, 2019</h3>
+                  <h2>JavaScript</h2>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetuer adipi-sicing elit,
+                    sed diam nonummy nibh euismod tin- cidunt ut laoreet dolore
+                    magna aliquam erat vo-
+                  </p>
+                  <button>read more</button>
+                </figcaption>
+              </figure>
+            </li>
+            <!-- end of card3 -->
+            <!-- card4 -->
+            <li class="card4">
+              <figure>
+                <div class="img-container">
+                  <img
+                    src="./styles/images/instructor-teaching-male-student-while-women-work-beside.jpg"
+                    alt="instructor helping a male student while female student working beside"
+                  />
+                </div>
+
+                <figcaption>
+                  <h3 class="date">jav 4, 2019</h3>
+                  <h2>Student Experience</h2>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetuer adipi-sicing elit,
+                    sed diam nonummy nibh euismod tin- cidunt ut laoreet dolore
+                    magna aliquam erat vo-
+                  </p>
+                  <button>read more</button>
+                </figcaption>
+              </figure>
+              <!-- end of card 4 -->
+            </li>
+          </ul>
+          <!-- end of flexContainer -->
+        </div>
+        <!-- end of wrapper -->
+      </section>
+      <!-- end of about section -->
+    </main>
+    <!-- end of main -->
+
+    <!-- footer -->
+    <footer id="contact">
+      <!-- wrapper -->
+      <div class="wrapper">
+        <!-- top -->
+        <div class="footer-top">
+          <!-- flexContainer -->
+          <div class="flexContainer">
+            <!-- left footer -->
+            <div class="footer-left">
+              <!-- footer-info -->
+              <article class="footer-info">
+                <h3>hackeryou tech test</h3>
+                <p>
+                  Lorem ipsum, dolor sit amet consecteturer adipisicing elit,
+                  sed diam nonummy nibh euismod tincidunt.
+                </p>
+              </article>
+              <!-- end of footer-info -->
+
+              <!-- footer navbar -->
+              <nav class="footer-nav">
+                <ul>
+                  <li><a href="#home">home</a></li>
+                  <li><a href="#about">about</a></li>
+                  <li><a href="#bootcamp">bootcamp</a></li>
+                  <li><a href="#part-time">part-time</a></li>
+                  <li><a href="#contact">contact</a></li>
+                </ul>
+              </nav>
+              <!-- End of footer navbar -->
+            </div>
+            <!-- end of left footer -->
+
+            <!--  right footer -->
+            <div class="footer-right">
+              <h3>subscribe to our newsletter</h3>
+              <p>Lorem ipsum dolor sit amet. consectetuer adipiscing.</p>
+
+              <!-- form -->
+              <form action="#" method="#" class="footer-form">
+                <label for="email" aria-hidden="true"></label>
+                <input type="email" id="email" placeholder="email address" />
+                <input type="button" value="subscribe" />
+              </form>
+              <!-- end of form-->
+            </div>
+            <!-- end of right footer -->
+          </div>
+          <!-- end of flexContainer -->
+        </div>
+        <!-- end of top -->
+      </div>
+      <!-- end of wrapper -->
+
+      <!-- bottom -->
+      <div class="footer-bottom">
+        <!-- wrapper -->
+        <div class="wrapper flexContainer">
+          <!-- logo -->
+          <div class="copyright">
+            <h3>© 2018 hackeryou</h3>
+          </div>
+          <!-- icons -->
+          <ul class="social-icons">
+            <li>
+              <a href="https://twitter.com/" target="_blank"
+                ><i class="fab fa-twitter"></i
+              ></a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/?hl=en" target="_blank"
+                ><i class="fab fa-instagram"></i
+              ></a>
+            </li>
+            <li>
+              <a href="https://www.facebook.com/" target="_blank"
+                ><i class="fab fa-facebook-f"></i
+              ></a>
+            </li>
+            <li>
+              <a
+                href="https://aboutme.google.com/u/0/?referer=gplus"
+                target="_blank"
+                ><i class="fab fa-google-plus-g"></i
+              ></a>
+            </li>
+          </ul>
+          <!-- end of icon -->
+        </div>
+        <!-- end of wrapper -->
+      </div>
+      <!-- end of bottom -->
+    </footer>
+    <!-- End of footer -->
+
+    <!-- jQuery -->
+    <script src="./scripts/jQuery.js"></script>
+    <!-- flickity -->
+    <!-- Backup local script  -->
+    <!-- <script src="/scripts/flickity.js"></script> -->
+    <script src="https://unpkg.com/flickity@2.2.0/dist/flickity.pkgd.min.js"></script>
+    <!-- smooth scroll -->
+    <script src="./scripts/smooth-scroll.js"></script>
+    <!-- main scripts -->
+    <script src="./scripts/script.js"></script>
   </body>
+  <!-- End of Body -->
 </html>
